added dmp state navigator

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="rows">
 
       <div class="box-borders pad-30">
-        <h1>Type & Icons</h1>
+        <h1>Type & Iconz</h1>
       </div>
 
       <!-- h2 -->
@@ -851,7 +851,6 @@
         </div>
       </div>
     </div>    
-
 
   </div>    
 
