added font refs

--- a/xds-meeting-urls-create.html
+++ b/xds-meeting-urls-create.html
@@ -5,6 +5,24 @@
   <link rel="stylesheet" href="./xds.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>XDS - x.ai design system</title>
+  <style>
+    @font-face { 
+      font-family: 'Avenir Next'; 
+      src: url('./fonts/AvenirNext-Regular.woff2') format('woff2'); 
+      font-weight: 400;
+    }  
+    @font-face { 
+      font-family: 'Avenir Next'; 
+      src: url('./fonts/AvenirNext-DemiBold.woff2') format('woff2'); 
+      font-weight: 600; 
+    }  
+    @font-face { 
+      font-family: 'Sofia Pro'; 
+      src: url('./fonts/SofiaPro-Medium.woff2') format('woff2'); 
+      font-weight: 500; 
+    }  
+
+  </style>    
 </head>
 <body id="xds" style="padding: 40px;">
 
