--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="rows">
 
       <div class="box-borders pad-30">
-        <h1>Type & Iconz</h1>
+        <h1>Type & Icons</h1>
       </div>
 
       <!-- h2 -->
