fixed css center

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body id="xds">
 
-<div class="rows center">
+<div class="rows center-center">
 
   <!-- elements -->
   <div class="rows gap-50 width-700 pad-10">
@@ -35,7 +35,7 @@
     <!-- logo -->
     <!-- logo -->
     <!-- logo -->
-    <div class="rows center pad-10">
+    <div class="rows center-center pad-10">
         <div class="icon-xai">
           <svg height="152" viewBox="0 0 133 152" width="133" xmlns="http://www.w3.org/2000/svg"><g fill="#01a9ed" fill-rule="evenodd"><path d="m101.47 117.62-11.7199996 15.36h-.43l-22.42-30.7-22.93 30.7h-23l34.17-45.69-31.82-41.29h23.86l19.79 26.46 20-26.46h23.1899996l-31.4999996 41.29z"/><path d="m122.66 112.000042c5.883422.016558 10.641012 4.796509 10.629982 10.679944-.011031 5.883435-4.786511 10.645513-10.669953 10.640009-5.883443-.005503-10.650005-4.776508-10.650029-10.659953-.000011-2.832413 1.12721-5.548382 3.132841-7.548384 2.005631-2.000003 4.724757-3.119587 7.557159-3.111616z"/><path d="m124.86 86.31v-63.62h-116.42999959v121.17h72.53999999l-6.45 8.46h-74.54999999v-153.32h133.34999959v76.22z"/></g></svg>    
         </div>
@@ -250,7 +250,7 @@
           <pre class="code">  .triangle.down</pre>
         </div>
         <div>
-          <button class="button small cols gap-10 center ">
+          <button class="button small cols gap-10 center-center ">
             <div class="icon-triangle down"></div>
             <div>Advanced Settings</div>
           </button>
@@ -700,7 +700,7 @@
             <!-- meeting -->
             <div><strong>Weekly Production Sync</strong> at 2:00 PM <strong>needs a location</strong>.</div>      
             <!-- actions -->
-            <div class="rows center">
+            <div class="rows center-center">
               <div class="rows gap-5">
                 <button class="button primary thin width-200">Edit location</button>
                 <button class="button secondary thin width-200">Adjust this alert</button>
@@ -736,7 +736,7 @@
               </div>  
             </div>
             <!-- actions -->
-            <div class="rows center">
+            <div class="rows center-center">
               <div class="rows gap-5">
                 <button class="button primary thin width-150">Edit meeting</button>
                 <button class="button secondary thin width-150">Adjust this alert</button>
@@ -794,7 +794,7 @@
                 </ul>
               </div>  
               <!-- avatar -->
-              <div class="center rows gap-3">
+              <div class="center-center rows gap-3">
                   <div class="avatar">
                     <img src="./images/jane.jpg">
                   </div>
@@ -820,7 +820,7 @@
             <div class="cols gap-5">
               <!-- avatar -->
               <div class="flex-1 rows gap-3">
-                <div class="center rows gap-3">
+                <div class="center-center rows gap-3">
                   <div class="avatar">
                     <img src="./images/jill.jpg">
                   </div>
@@ -835,7 +835,7 @@
       
               <!-- avatar -->
               <div class="flex-1 rows gap-3">
-                <div class="center rows gap-3">
+                <div class="center-center rows gap-3">
                   <div class="avatar">
                     <img src="./images/john.jpg">
                   </div>
