--- a/xds-dmp-prefs.html
+++ b/xds-dmp-prefs.html
@@ -29,7 +29,7 @@
 <div>
   <div class="hr-blue"></div>
 
-  <div class="rows gap-10 pad-20 center">      
+  <div class="rows gap-10 pad-20 center-center">      
     
     <!-- sign out -->
     <div class="cols width-1200">
@@ -43,7 +43,7 @@
     <div id="prefs-home" class="rows gap-10">
       
       <!-- NAV -->
-      <div class="rows center gap-10 pad-15">
+      <div class="rows center-center gap-10 pad-15">
 
         <!-- logo -->
         <div class="icon-xai">
@@ -260,14 +260,14 @@
     </div>
 
     <!-- 3. THANK YOU -->
-    <div id="thanks-home" class="rows center gap-10 hidden">
+    <div id="thanks-home" class="rows center-center gap-10 hidden">
       <!-- logo -->
       <div class="icon-xai">
         <svg height="152" viewBox="0 0 133 152" width="133" xmlns="http://www.w3.org/2000/svg"><g fill="#01a9ed" fill-rule="evenodd"><path d="m101.47 117.62-11.7199996 15.36h-.43l-22.42-30.7-22.93 30.7h-23l34.17-45.69-31.82-41.29h23.86l19.79 26.46 20-26.46h23.1899996l-31.4999996 41.29z"/><path d="m122.66 112.000042c5.883422.016558 10.641012 4.796509 10.629982 10.679944-.011031 5.883435-4.786511 10.645513-10.669953 10.640009-5.883443-.005503-10.650005-4.776508-10.650029-10.659953-.000011-2.832413 1.12721-5.548382 3.132841-7.548384 2.005631-2.000003 4.724757-3.119587 7.557159-3.111616z"/><path d="m124.86 86.31v-63.62h-116.42999959v121.17h72.53999999l-6.45 8.46h-74.54999999v-153.32h133.34999959v76.22z"/></g></svg>    
       </div>      
 
-      <h2 class="text-center">Thank you for subscribing</h2>
-      <div class="rows center">
+      <h2 class="text-center-center">Thank you for subscribing</h2>
+      <div class="rows center-center">
         <img src="./images/zero-state.png" alt="zero-state" class="width-300">
       </div>
 
