--- a/xds-meeting-urls-create.html
+++ b/xds-meeting-urls-create.html
@@ -27,10 +27,10 @@
 <body id="xds" style="padding: 40px;">
 
   <!-- create pages -->
-<div id="create-pages" class="rows gap-30 center hidden">
+<div id="create-pages" class="rows gap-30 center-center hidden">
 
     <!-- header -->
-    <div class="rows center">
+    <div class="rows center-center">
       <h2>Create calendar pages</h2>
     </div>
 
@@ -42,7 +42,7 @@
 
         <!-- zero state -->
         <div id="zero-state" class="rows gap-10">
-          <div class="cols center">
+          <div class="cols center-center">
             <img class="width-300" src="./images/zero-state.png" alt="zero state">
           </div>
           <div class="rows gap-5">
@@ -150,7 +150,7 @@
 </div>
 
 <!-- page -->
-<div id="page" class="rows center">
+<div id="page" class="rows center-center">
 
   <!-- header -->
   <h2>Create page</h2>
@@ -159,7 +159,7 @@
 
     <!-- back -->
     <div>
-      <button class="button small cols gap-10 center ">
+      <button class="button small cols gap-10 center-center ">
         <div class="icon-triangle left"></div>
         <div>Back</div>
       </button>
