--- a/email-basic.html
+++ b/email-basic.html
@@ -37,6 +37,11 @@
       #xds p {
         line-height: 17px;
       }
+      #xds a {
+        font-weight: 600;
+        text-decoration: none;
+        color: #01A9ED;
+      }
 
       /* classes */
       #xds .container {
@@ -179,7 +184,7 @@
     </style>
   </head>
   <body>
-    <!-- Daily Agenda start -->
+    <!-- Daily Agenda -->
     <div id="xds">
       <div class="vmargin-20 container">
         <div class="">
@@ -245,31 +250,40 @@
         <div class="vmargin-5">
           <p>You have a <strong>meeting conflicts</strong> today:</p>
           <div class="box-borders">
+
+            <!--  -->
             <div class="pad-15-20 vmargin-20">
               <div>
                 <div class="width-50 vmargin-3">
                   <h3>Budget Review</h3>
                   <ul class="vmargin-3">
-                    <li class="location">Ken Tardin</li>
                     <li class="guests">1:00 PM to 2:00 PM</li>
                   </ul>
                 </div>
-                <div class="width-50 vmargin-3 vr pad-l-15">
+                <div class="width-50 vmargin-3 pad-l-15">
                   <h3>Conference Call</h3>
                   <ul class="vmargin-3">
-                    <li class="location">Kate Leo, Georgia Black</li>
                     <li class="guests">1:00 PM to 2:00 PM</li>
                   </ul>
                 </div>
               </div>
-              <div class="vmargin-10">
-                <div class="button-primary center">
-                  <a href="#"> <span class="white">Edit meeting</span> </a>
+            </div>
+            <hr>
+
+            <!--  -->
+            <div class="pad-15-20 vmargin-20">
+              <div>
+                <div class="width-50 vmargin-3">
+                  <h3>Weekly Sync</h3>
+                  <ul class="vmargin-3">
+                    <li class="guests">1:00 PM to 2:00 PM</li>
+                  </ul>
                 </div>
-                <div class="button-secondary center">
-                  <a href="#">
-                    <span class="blue">Adjust this location</span>
-                  </a>
+                <div class="width-50 vmargin-3 pad-l-15">
+                  <h3>Design Review</h3>
+                  <ul class="vmargin-3">
+                    <li class="guests">1:00 PM to 2:00 PM</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -285,97 +299,44 @@
           <div class="box-borders">
             <div class="pad-15-20 vmargin-10 ">
               <p>
-                Weekly Production Sync at 2:00 PM
-                <strong>needs a location</strong>.
+                Weekly Production Sync at 2:00 PM needs a location.
               </p>
-              <div class="vmargin-10">
-                <div class="button-primary center">
-                  <a href="#"> <span class="white">Edit location</span> </a>
-                </div>
-                <div class="button-secondary center">
-                  <a href="#">
-                    <span class="blue">Adjust this location</span>
-                  </a>
-                </div>
-              </div>
+            </div>
+            <hr>
+            <div class="pad-15-20 vmargin-10 ">
+              <p>
+                  Call with Georgia at 5:00 PM needs a phone number. 
+              </p>
             </div>
           </div>
         </div>
 
-        <!-- early day -->
-        <div class="vmargin-5">
-          <p>You have an <strong>early day</strong> today:</p>
-          <div class="box-borders">
-            <div class="pad-15-20 vmargin-5">
-              <h3>Design Review</h3>
-              <div>
-                <ul class="vmargin-3 width-70">
-                  <li class="location">Black Fox Coffee</li>
-                  <li class="guests">Kate Lao, Georgia Black</li>
-                </ul>
-                <ul class="vmargin-3 width-30">
-                  <li class="time">10:00 AM</li>
-                  <li class="time">10:30 AM</li>
-                </ul>
-              </div>
-            </div>
-          </div>
+
+      <p>
+          Daily Meeting Prep is in beta. Customize your email or help us improve the product:
+      </p>
+  
+      <div class="vmargin-10">
+        <div class="button-primary center">
+          <a href="#"> <span class="white">Adjust these alerts</span> </a>
+        </div>
+        <div class="button-primary center">
+          <a href="#"> <span class="white">Send feedback</span> </a>
         </div>
       </div>
-    </div>
-    <!-- Daily Agenda end -->
 
-    <div style="height: 200px;"></div>
+      <hr>
 
-    <!-- Meeting Reminder start -->
-    <div id="xds">
-      <div class="vmargin-20 container">
-        <div class="center">
-          <img
-            src="https://i.postimg.cc/zB2D3LRN/logo-xai.png"
-            class="center"
-            style="width: 60px;"
-          />
-        </div>
-
-        <!-- early day -->
-        <div class="vmargin-10">
-          <p>Your upcoming meeting with Jane is confirmed:</p>
-          <div class="box-borders vmargin-10">
-            <div class="pad-15-20 vmargin-5">
-              <h3>Design Review</h3>
-              <div>
-                <ul class="vmargin-3 width-70">
-                  <li class="location">Black Fox Coffee</li>
-                  <li class="guests">Kate Lao, Georgia Black</li>
-                </ul>
-                <ul class="vmargin-3 width-30">
-                  <li class="time">10:00 AM</li>
-                  <li class="time">10:30 AM</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="hmargin-5">
-            <div class="button-outline">
-              <a href="#"> <span class="black">View Meeting</span> </a>
-            </div>
-            <div class="button-outline">
-              <a href="#"> <span class="black">Reschedule</span> </a>
-            </div>
-            <div class="button-outline">
-              <a href="#"> <span class="black">Decline</span> </a>
-            </div>
-          </div>
-          <hr />
-          <div>
-            <p><strong>Amy Ingram</strong></p>
-            <p>Artificial intelligence that schedules meetings</p>
-          </div>
-        </div>
-      </div>
+      <p>
+          Created by <a href="#">x.ai</a> in New York City. 
+          <a href="#">Click here</a> to unsubscribe.
+      </p>      
+          
     </div>
 
-    <!-- Meeting Reminder end -->
+    </div>
+
+
+
   </body>
 </html>
