--- a/email-basic.html
+++ b/email-basic.html
@@ -299,13 +299,15 @@
           <div class="box-borders">
             <div class="pad-15-20 vmargin-10 ">
               <p>
-                Weekly Production Sync at 2:00 PM needs a location.
+                Weekly Production Sync at 2:00 PM 
+                <strong>needs a location</strong>.
               </p>
             </div>
             <hr>
             <div class="pad-15-20 vmargin-10 ">
               <p>
-                  Call with Georgia at 5:00 PM needs a phone number. 
+                  Call with Georgia at 5:00 PM 
+                  <strong>needs a phone number</strong>. 
               </p>
             </div>
           </div>
