--- a/email-basic.html
+++ b/email-basic.html
@@ -62,6 +62,12 @@
         border: 1.5px solid #d9d9d9;
         border-radius: 15px;
       }
+      #xds .ellipsis {
+        text-overflow: ellipsis; 
+        overflow: hidden; 
+        white-space: nowrap;    
+      }  
+
 
       /* buttons */
       #xds .button-primary a,
@@ -255,13 +261,13 @@
             <div class="pad-15-20 vmargin-20">
               <div>
                 <div class="width-50 vmargin-3">
-                  <h3>Budget Review</h3>
+                  <h3 class="ellipsis">Budget Review with Ann</h3>
                   <ul class="vmargin-3">
                     <li class="guests">1:00 PM to 2:00 PM</li>
                   </ul>
                 </div>
                 <div class="width-50 vmargin-3 pad-l-15">
-                  <h3>Conference Call</h3>
+                  <h3 class="ellipsis">Conference Call with Executive Team</h3>
                   <ul class="vmargin-3">
                     <li class="guests">1:00 PM to 2:00 PM</li>
                   </ul>
@@ -274,7 +280,7 @@
             <div class="pad-15-20 vmargin-20">
               <div>
                 <div class="width-50 vmargin-3">
-                  <h3>Weekly Sync</h3>
+                  <h3 class="ellipsis">Weekly Production Sync</h3>
                   <ul class="vmargin-3">
                     <li class="guests">1:00 PM to 2:00 PM</li>
                   </ul>
